[EZManager] Fix overflow of title in video list (#76)

--- a/ezmanager/htdocs/css/style_podman.css
+++ b/ezmanager/htdocs/css/style_podman.css
@@ -424,7 +424,7 @@ body{
     font-weight:bold;
     padding-left:27px;
     padding-top:3px;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .ListButon.active {
